HTML overflow fix. (vuetify)

--- a/vue/scss/main.scss
+++ b/vue/scss/main.scss
@@ -1,5 +1,9 @@
 @import "variables";
 
+html {
+  overflow: hidden;
+}
+
 body {
   width: $actionWidth;
   height: $actionHeight;
